# GreenVault

./: CMakeLists.txt  Makefile  README.md  run.bat  run.sh
data/: settings.djb  user.djb
include/: util.hpp
include/core/: animation.hpp  database.hpp  gui.hpp
include/pages/: addAccountPage.hpp  addGoalsPage.hpp  addReportsPage.hpp  addTransactionPage.hpp  editTransactionPage.hpp  loginPage.hpp  mainPage.hpp  page.hpp  signupPage.hpp
scripts/: reportGenerator.py
src/: main.cpp  util.cpp
src/core/: animation.cpp  database.cpp
src/gui/: button.cpp  checkbox.cpp  dropdown.cpp  input.cpp  popup.cpp  scrollArea.cpp  text.cpp
src/pages/: addAccountPage.cpp  addGoalsPage.cpp  addReportsPage.cpp  addTransactionPage.cpp  editTransactionPage.cpp  loginPage.cpp  mainPage.cpp  signupPage.cpp
src/server/: Dotenv.java  Encryption.java  Main.java  Sync.java  key.txt
